add Swagger's shema to post orders
