# src/routes/orderRoutes.js
@@ -1,23 +1,31 @@
 const { Router } = require("express");
 
-const { getAllOrdersHandler, getOneOrderHandler, createOrderHandler, updateOrderHandler, deleteOrderHandler } = require("../handlers/orderHandler");
+const {
+  getAllOrdersHandler,
+  getOneOrderHandler,
+  createOrderHandler,
+  updateOrderHandler,
+  deleteOrderHandler,
+} = require("../handlers/orderHandler");
 
 const orderRouter = Router();
 
 //Ordenes
 orderRouter.get("/", getAllOrdersHandler);
 
-orderRouter.get("/:id",getOneOrderHandler );
+orderRouter.get("/:id", getOneOrderHandler);
 
 // orderRouter.get("/customer/:id",getOneOrderByCustomerHandler );
 
-orderRouter.post("/", createOrderHandler, 
-    /*  #swagger.requestBody = {
+orderRouter.post(
+  "/",
+  createOrderHandler
+  /*  #swagger.requestBody = {
             required: true,
             content: {
                 "application/json": {
                     schema: {
-                        $ref: "#/components/schemas/someSchema"
+                        $ref: "#/components/schemas/ordersSchema"
                     }  
                 }
             }
@@ -27,6 +35,6 @@ orderRouter.post("/", createOrderHandler,
 
 orderRouter.put("/:id", updateOrderHandler);
 
-orderRouter.delete("/:id",deleteOrderHandler);
+orderRouter.delete("/:id", deleteOrderHandler);
 
 module.exports = orderRouter;
